fix concurrency group

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     name: Test
     runs-on: [self-hosted, liatrio-lead-terraform]
     concurrency:
-      group: ${{ env.GITHUB_REF }}
+      group: ${{ github.ref }}
       cancel-in-progress: false
     steps:
       - name: Checkout lead-environments
