--- a/modules/common/cert-issuer/helm/cert-manager-issuers/Chart.yaml
+++ b/modules/common/cert-issuer/helm/cert-manager-issuers/Chart.yaml
@@ -1,4 +1,5 @@
+apiVersion: v2
 name: cert-manager-issuers
-version: v0.1.0
-appVersion: v0.1.0
+version: 0.2.0
+appVersion: 0.1.0
 description: A Helm chart for the issuers
