--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -79,6 +79,7 @@ jobs:
         if: ${{ always() }}
         with:
           github_token: ${{ secrets.github_token }}
+          tfsec_version: "v0.63.1"
           fail_on_error: "true"
           filter_mode: "nofilter"
           tfsec_flags: "-e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,general-secrets-sensitive-in-attribute"
