ci: set fail-fast to false

--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -35,6 +35,7 @@ jobs:
         # ↓ create dynamic matrix from the json
         matrix:
           validate: ${{ fromJson(needs.discover_stages.outputs.matrix) }}
+        fail-fast: false
     defaults:
       run:
         shell: bash
