fix: quotes instead of backticks

--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -57,7 +57,7 @@ jobs:
           cd $FOLDER
 
           if [ ! -f ".terragrunt.lock.hcl" ]; then
-            echo "Terraform lockfile doesn't exist in this root module. Please create one using `terraform init -backend=false`"
+            echo "Terraform lockfile doesn't exist in this root module. Please create one using \"terraform init -backend=false\""
             exit 1
           fi
 
