--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -6,12 +6,11 @@ on:
 
 jobs:
 
-  # phase 1
   discover_stages:
     name: Discover
     runs-on: ubuntu-latest
     steps:
-      # Checkout the repository to the GitHub Actions runner
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -19,17 +18,15 @@ jobs:
       - id: set-matrix
 
         # find main.tf files in stages folder, trim to path, store as array, remove any empty.
-        run: echo "::set-output name=matrix::$(find stages -name main.tf | sed 's:[^/]*$::' | jq -R -s -c 'split("\n")' | jq -c 'map(select(length > 0))' )"
+        run: echo "::set-output name=matrix::$(find stages -name main.tf | sed 's:[^/]*$::' | jq -R -s -c 'split("\n") | map(select(length > 0))')"
 
-    # here, we save the result of this 1st phase to the "outputs"
     outputs:
         matrix: ${{ steps.set-matrix.outputs.matrix }}
 
-# phase 2, use it in a matrix
   terraform_validate:
     name: "Validate"
     runs-on: ubuntu-latest
-    # this means, wait for the "discover_stages" phase 1 to finish
+
     needs: discover_stages
     strategy:
         # ↓ create dynamic matrix from the json
@@ -41,11 +38,10 @@ jobs:
         shell: bash
 
     steps:
-      # Checkout the repository to the GitHub Actions runner
+
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup
         uses: hashicorp/setup-terraform@v1
 
@@ -72,11 +68,10 @@ jobs:
         shell: bash
 
     steps:
-      # Checkout the repository to the GitHub Actions runner
+
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
