--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,9 @@ jobs:
           branch=${{ steps.branch.outputs.current_branch }}
           echo "::set-output name=name::${branch//[^-a-z0-9]/-}-vcluster"
 
+      - name: Sleep
+        run: sleep 1440
+
       - name: Create vcluster
         env:
           VCLUSTER_NAME: ${{ steps.vcluster-name.outputs.name }}
