--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -63,12 +63,13 @@ jobs:
   terraform_format:
     name: "Format"
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
+    strategy:
+        # ↓ create dynamic matrix from the json
+        matrix:
+          validate: ${{ fromJson(needs.discover_stages.outputs.matrix) }}
+        fail-fast: false
 
     steps:
-
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -77,22 +78,35 @@ jobs:
 
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
-        run: terraform fmt -check -recursive
+        run: terraform fmt -check
 
-      - name: Run tfsec with reviewdog
-        uses: reviewdog/action-tfsec@v1.11.0
-        if: ${{ always() }}
-        with:
-          github_token: ${{ secrets.github_token }}
-          tfsec_version: "v0.63.1"
-          fail_on_error: "true"
-          filter_mode: "nofilter"
-          tfsec_flags: "-e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,general-secrets-sensitive-in-attribute"
+      # TODO: need to setup go?
 
-      - name: Run tflint with reviewdog
-        uses: reviewdog/action-tflint@v1.13.0
-        if: ${{ always() }}
+      - name: Install tfsec
+        run: go install github.com/aquasecurity/tfsec/cmd/tfsec@v1.26.3
+
+      - name: Run tfsec on each folder
+        env:
+          FOLDER: ${{ matrix.validate }}
+        run: |
+          cd $FOLDER
+
+          tfsec \
+          -e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,general-secrets-sensitive-in-attribute \
+          --format sarif \
+          --out tfsec.sarif
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif
         with:
-          github_token: ${{ secrets.github_token }}
-          fail_on_error: "true"
-          filter_mode: "nofilter"
+          sarif-file: ./tfsec.sarif
+
+      # TODO: incorporate tflint
+
+      # - name: Run tflint with reviewdog
+      #   uses: reviewdog/action-tflint@v1.13.0
+      #   if: ${{ always() }}
+      #   with:
+      #     github_token: ${{ secrets.github_token }}
+      #     fail_on_error: "true"
+      #     filter_mode: "nofilter"
