--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -63,11 +63,6 @@ jobs:
   terraform_format:
     name: "Format"
     runs-on: ubuntu-latest
-    strategy:
-        # ↓ create dynamic matrix from the json
-        matrix:
-          validate: ${{ fromJson(needs.discover_stages.outputs.matrix) }}
-        fail-fast: false
 
     steps:
       - name: Checkout
@@ -78,7 +73,7 @@ jobs:
 
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
-        run: terraform fmt -check
+        run: terraform fmt -check --recursive
 
       # TODO: need to setup go?
 
@@ -86,18 +81,15 @@ jobs:
         run: go install github.com/aquasecurity/tfsec/cmd/tfsec@v1.26.3
 
       - name: Run tfsec on each folder
-        env:
-          FOLDER: ${{ matrix.validate }}
         run: |
-          cd $FOLDER
-
           tfsec \
           -e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,general-secrets-sensitive-in-attribute \
           --format sarif \
-          --out tfsec.sarif
+          --out tfsec.sarif \
+          --force-all-dirs
 
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif
+        uses: github/codeql-action/upload-sarif@v1
         with:
           sarif-file: ./tfsec.sarif
 
