--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -95,7 +95,7 @@ jobs:
         if: always()
         uses: github/codeql-action/upload-sarif@v1
         with:
-          sarif-file: ./tfsec.sarif
+          sarif_file: ./tfsec.sarif
 
       # TODO: incorporate tflint
 
