--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -87,15 +87,16 @@ jobs:
         run: |
           tfsec \
           -e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,general-secrets-sensitive-in-attribute \
-          --format sarif \
-          --out tfsec.sarif \
-          --force-all-dirs
+          --format=sarif \
+          --out=tfsec.sarif \
+          --force-all-dirs \
+          --soft-fail
 
       - name: Upload SARIF file
         if: always()
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: ./tfsec.sarif
+          sarif_file: tfsec.sarif
 
       # TODO: incorporate tflint
 
