--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -63,7 +63,12 @@ jobs:
   terraform_format:
     name: "Format"
     runs-on: ubuntu-latest
-
+    needs: discover_stages
+    strategy:
+        # ↓ create dynamic matrix from the json
+        matrix:
+          validate: ${{ fromJson(needs.discover_stages.outputs.matrix) }}
+        fail-fast: false
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -92,6 +97,7 @@ jobs:
         uses: reviewdog/action-tflint@v1.13.0
         if: ${{ always() }}
         with:
+          working_directory: ${{ matrix.validate }}
           github_token: ${{ secrets.github_token }}
           fail_on_error: "true"
           filter_mode: "nofilter"
