ci: change so tflint runs for every stage

--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -60,15 +60,9 @@ jobs:
           terraform init -backend=false
           terraform validate
 
-  terraform_format:
-    name: "Format"
+  tfsec:
+    name: "TFSec and Terraform Format"
     runs-on: ubuntu-latest
-    needs: discover_stages
-    strategy:
-        # ↓ create dynamic matrix from the json
-        matrix:
-          validate: ${{ fromJson(needs.discover_stages.outputs.matrix) }}
-        fail-fast: false
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -93,6 +87,20 @@ jobs:
         with:
           sarif_file: tfsec.sarif
 
+  tflint:
+    name: "TFLint"
+    runs-on: ubuntu-latest
+    needs: discover_stages
+    strategy:
+        # ↓ create dynamic matrix from the json
+        matrix:
+          validate: ${{ fromJson(needs.discover_stages.outputs.matrix) }}
+        fail-fast: false
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Run tflint with reviewdog
         uses: reviewdog/action-tflint@v1.13.0
         if: ${{ always() }}
@@ -101,3 +109,4 @@ jobs:
           github_token: ${{ secrets.github_token }}
           fail_on_error: "true"
           filter_mode: "nofilter"
+    
