--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -2,43 +2,37 @@ name: "Terraform Code Quality"
 
 on:
   pull_request:
+    branches:
+      - "master"
   push:
+    branches:
+      - "master"
 
 jobs:
-
-  discover_stages:
+  discover:
     name: Discover
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v2
 
       # here we create the json, we need the "id:" so we can use it in "outputs" below
       - id: set-matrix
-
-        # find main.tf files in stages folder, trim to path, store as array, remove any empty.
-        run: echo "::set-output name=matrix::$(find stages -name main.tf | sed 's:[^/]*$::' | jq -R -s -c 'split("\n") | map(select(length > 0))')"
-
+        # find tf files in all folders, trim to path, store as array, remove any empty.
+        run: echo "::set-output name=matrix::$(find . -name *.tf | sed 's:[^/]*$::' | jq -R -s -c 'split("\n") | map(select(length > 0))')"
     outputs:
         matrix: ${{ steps.set-matrix.outputs.matrix }}
 
   terraform_validate:
     name: "Validate"
     runs-on: ubuntu-latest
-
-    needs: discover_stages
+    needs: discover
     strategy:
         # ↓ create dynamic matrix from the json
         matrix:
-          validate: ${{ fromJson(needs.discover_stages.outputs.matrix) }}
+          validate: ${{ fromJson(needs.discover.outputs.matrix) }}
         fail-fast: false
-    defaults:
-      run:
-        shell: bash
-
     steps:
-
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -60,6 +54,19 @@ jobs:
           terraform init -backend=false
           terraform validate
 
+      - name: Run tfsec
+        uses: aquasecurity/tfsec-sarif-action@v0.1.3
+        with:
+          sarif_file: tfsec.sarif
+          working_directory: ${{ matrix.validate }}
+          tfsec_args: "-e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,general-secrets-sensitive-in-attribute"
+
+      - name: Upload SARIF file
+        if: always()
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: tfsec.sarif
+
       - name: Run tflint with reviewdog
         uses: reviewdog/action-tflint@v1.17.0
         if: always()
@@ -70,7 +77,7 @@ jobs:
           filter_mode: "nofilter"
           reporter: github-pr-review
 
-  tfsec:
+  terraform_format:
     name: "TFSec and Terraform Format"
     runs-on: ubuntu-latest
     steps:
@@ -83,16 +90,3 @@ jobs:
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
         run: terraform fmt -check --recursive
-
-      - name: Run tfsec with sarif upload
-        uses: aquasecurity/tfsec-sarif-action@v0.1.3
-        with:
-          sarif_file: tfsec.sarif
-          full_repo_scan: true
-          tfsec_args: "-e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,general-secrets-sensitive-in-attribute"
-
-      - name: Upload SARIF file
-        if: always()
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: tfsec.sarif
