--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -2,14 +2,10 @@ name: "Terraform Code Quality"
 
 on:
   pull_request:
-    branches:
-      - "master"
   push:
-    branches:
-      - "master"
 
 jobs:
-  discover:
+  discover_stages:
     name: Discover
     runs-on: ubuntu-latest
     steps:
@@ -26,11 +22,11 @@ jobs:
   terraform_validate:
     name: Validate
     runs-on: ubuntu-latest
-    needs: discover
+    needs: discover_stages
     strategy:
         # ↓ create dynamic matrix from the json
         matrix:
-          validate: ${{ fromJson(needs.discover.outputs.matrix) }}
+          validate: ${{ fromJson(needs.discover_stages.outputs.matrix) }}
         fail-fast: false
     steps:
       - name: Checkout
