--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -62,6 +62,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: tfsec.sarif
+          category: ${{ matrix.validate }}
 
       - name: Run tflint with reviewdog
         uses: reviewdog/action-tflint@v1.17.0
