ifx: updated tfc feature

--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -53,7 +53,7 @@ jobs:
       - name: terraform-compliance
         uses: terraform-compliance/github_action@main
         with:
-          plan: plan.out.json
+          plan: ${{ matrix.validate }}/plan.out.json
           features: ssh://git@github.com/terraform-compliance/user-friendly-features.git
 
 
