--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -51,8 +51,8 @@ jobs:
             exit 1
           fi
 
-          terraform init -backend=false
-          terraform plan -out=plan.out && terraform show -json plan.out > plan.out
+          terraform init
+          terraform plan -out=plan.out && terraform show -json plan.out.json > plan.out.json
           terraform validate
        
       - name: terraform-compliance
@@ -61,8 +61,8 @@ jobs:
           FOLDER: ${{ matrix.validate }}
         run: |
           cd $FOLDER
-          terraform-compliance -p plan.out -f git:ssh://git@github.com/terraform-compliance/user-friendly-features.git
-          rm plan.out
+          terraform-compliance -p plan.out.json -f git:ssh://git@github.com/terraform-compliance/user-friendly-features.git
+          rm plan.out.json
 
       # - name: terraform-compliance
       #   uses: terraform-compliance/github_action@main
